# ccsight

./: CLAUDE.md  Cargo.toml  README.md  build.rs
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml  verify.yml
scripts/: install-hooks.sh  lint.sh  smoke-ci.sh  smoke.sh
scripts/hooks/: pre-commit  pre-push
src/: cli.rs  conversation.rs  domain.rs  main.rs  main_tests.rs  mcp.rs  parser.rs  pins.rs  search.rs  search_history.rs  shell.rs  state.rs  summary.rs  test_helpers.rs  text.rs
src/aggregator/: buckets.rs  grouping.rs  language.rs  mod.rs  pricing.rs  stats.rs  tool_category.rs
src/handlers/: keyboard.rs  mcp_popup.rs  mouse.rs  pane.rs  tasks.rs
src/infrastructure/: atomic.rs  cache.rs  codex_parser.rs  codex_source.rs  cowork_source.rs  file_discovery.rs  live_diagnostic.rs  live_sessions.rs  live_snapshot.rs  live_snapshots.rs  mcp_config.rs  mod.rs  search_index.rs  state_dir.rs
src/ui/: dashboard.rs  insights.rs  mod.rs
