[package]
name = "ccsight"
version = "1.2.4"
edition = "2024"
rust-version = "1.87"
build = "build.rs"
description = "Claude Code session analytics TUI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/esorae/ccsight"
keywords = ["claude", "tui", "analytics", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# TUI
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"

# Async runtime
tokio = { version = "1", features = ["full", "process", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# File discovery
glob = "0.3"

# Syntax highlighting
# Trim feature set so the unmaintained `yaml-rust` (yaml-load) and the
# native `onig` build dep (regex-onig) don't get pulled. ccsight only
# needs to read syntect's bundled syntaxes / themes (binary dumps) and
# run the highlighter — `parsing` + default {syntaxes,themes} + a regex
# backend cover that. bincode 1 stays (dump-load needs it); no upstream
# workaround until syntect migrates off bincode 1.x.
syntect = { version = "5", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "regex-fancy",
] }

# Regex for parsing
regex = "1"

# Unicode width
unicode-width = "0.2"

# Clipboard
arboard = "3"

# MCP server
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "1"

# Full-text search
tantivy = "0.26"

# Parallel processing
rayon = "1"

[dev-dependencies]
# Property-based testing for security-sensitive pure functions
# (posix_shell_quote, user-message wrapper detection, etc.).
proptest = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Result/Option ignoring prevention
let_underscore_must_use = "warn"

# Deny - must fix (code correctness & consistency)
derive_partial_eq_without_eq = "deny"
manual_string_new = "deny"
match_same_arms = "deny"
redundant_else = "deny"
rc_buffer = "deny"
implicit_clone = "deny"

# Warn - should fix (code quality)
# Catch unfinished/forgotten work that would otherwise reach release.
# `todo!()` / `unimplemented!()` panic at runtime; `dbg!()` floods stderr
# (forbidden in a TUI — see lint #20). All three are zero false-positive:
# legitimate uses in this codebase don't exist.
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"

uninlined_format_args = "warn"
redundant_closure_for_method_calls = "warn"
filter_map_next = "warn"
map_unwrap_or = "warn"
cloned_instead_of_copied = "warn"
from_iter_instead_of_collect = "warn"
manual_let_else = "warn"
needless_for_each = "warn"
or_fun_call = "warn"

# Allow - too noisy for this codebase
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
field_reassign_with_default = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cognitive_complexity = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
explicit_iter_loop = "allow"
flat_map_option = "allow"
match_bool = "allow"
semicolon_if_nothing_returned = "allow"
unused_self = "allow"
